--- a/src/template/template.html
+++ b/src/template/template.html
@@ -75,6 +75,7 @@
                 width: 100%;
                 text-align: left;
                 padding-left: 5px;
+                overflow-wrap: anywhere; /* Fix text overflowing the table */
             }
 
             .todo_notes_line_nr {
