--- a/src/template/template.html
+++ b/src/template/template.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>idea</title>
@@ -109,10 +110,6 @@
                 border-bottom: 1px solid;
             }
 
-            #export_date_js {
-                display: none;
-            }
-
             .text_dark {
                 color: var(--fg-dark);
             }
@@ -165,7 +162,7 @@
                 <c> List_iterator iterator = list_iterator_create(todo_list); </c>
                 <c> while (list_iterator_next(&iterator)) { </c>
                     <c> Todo *e = list_iterator_element(iterator); </c>
-                    <div id="<c>CSTR(e->id)</c>" class="todo">
+                    <div class="todo">
                         <div class="todo_header">
                             <h2 class="unselectable"><c>CSTR(e->name)</c></h2>
                             <p class="arrow_show unselectable">&#9660;</p>
@@ -173,7 +170,7 @@
 
                         <hr class="todo_header_separator">
                         <div class="todo_data">
-                            <p class="todo_info"></p>
+                            <p class="todo_info">Created on <b><c>TIME(e->creation_time)</c></b> on <b><c>CSTR(e->hostname)</c></b></p>
 
                             <c> if (e->notes) { </c>
                                 <h3>Notes:</h3>
@@ -224,21 +221,13 @@
             <p>
                 <span class="text_dark">Exported on</span>
 
-                <span id="export_date_c">
-                    <c>
-                        time_t currentTime;
-                        time(&currentTime);
-                        CSTR(ctime(&currentTime))
-                    </c>
-                </span>
-
-                <span id="export_date_js">
-                    <c>
-                        UNIX_TIME(&currentTime)
-                    </c>
-                </span>
+                <c>
+                    time_t now = time(NULL);
+                    TIME(now)
+                </c>
 
                 <span class="text_dark">from</span>
+
                 <c>
                     char hostname[256];
                     if (gethostname(hostname, sizeof(hostname)) == -1) return ERROR("Unable to get the hostname for exporting the ToDo");
@@ -266,11 +255,6 @@
             return list[0]
         }
 
-        // If the browser can execute JS, then convert Unix time to local time with it
-        export_date_c.style.display = "none"
-        export_date_js.style.display = "revert"
-        export_date_js.innerText = new Date(export_date_js.innerText * 1000).toLocaleString(undefined, { hour12: false })
-
         for (const todo of todos) {
             const data      = getElementInsideTodoContainer(todo, "todo_data")
             const header    = getElementInsideTodoContainer(todo, "todo_header")
@@ -282,10 +266,6 @@
             // browser doesn't execute the JS, the data can still be displayed
             separator.style.display = "none"
             data.style.display = "none"
-
-            const host = todo.id.split("-")[0]
-            const date = new Date(todo.id.split("-")[1] * 1000)
-            info.innerHTML = `Created on <b>${host}</b> on <b>${date.toLocaleString(undefined, { hour12: false })}</b>`
 
             if (!isMobile) {
                 // This gives some problems in mobile, because there's no cursor
